@startuml
'https://plantuml.com/class-diagram

note as commonProxy
普通代理
end note

interface Rent {
    void rent(String name)
}

class LandLord {
    void rent(String name)
}

class Agency {
    rent : Rent
    Agency(Rent rent)
    rent(String name)
}

Rent <|..down LandLord
Rent <|..down Agency
LandLord <--right Agency
@enduml